# BioDSA

./: .env.example  .gitignore  Pipfile  README.md  install-claude-code.sh  install-codex.sh  install-common.sh  install-cursor.sh  install-gemini.sh  install-openclaw.sh  pyproject.toml
benchmark_datasets/: __init__.py  preprocess_R_tasks.py  preprocess_python_tasks.py
benchmark_evaluation/: utils.py
benchmarks/: README.md
biodsa-agent-dev-skills/: 00-environment-setup.md  01-base-agent.md  02-single-agent.md  03-multi-agent.md  04-tools-and-wrappers.md  05-deliverables-and-testing.md  06-user-workflows.md  README.md  SKILL.md
biodsa-agent-exec-skills/: 01-agent-catalog.md  02-execution-patterns.md  03-output-and-deliverables.md  SKILL.md
biodsa_env/: Artifact.py  EvalDatasetLoader.py  ExecutionSandboxWrapper.py  README.md  __init__.py  utils.py
dspy_config/: compiled_codegen_gpt4o_demos.json  compiled_codegen_gpt4o_demos_R.json  compiled_codegen_gpt4o_fewshot.json  compiled_codegen_gpt4o_rag.json  compiled_question_refinement_gpt4omini_demos.json
example_credentials/: aws_credentials.json  azure_openai_credentials.json  gcp_googlesearch_credentials.json  openai.key  vertexai.json
sandbox/: Dataframe.py  ExecutionSandboxWrapper.py  utils.py
scripts/: run_code_execution.py  run_code_generation_R.py  run_code_generation_python.py  run_code_improvement_python.py  run_coder_agent.py  run_deepevidence_agent.py  run_dswizard_agent.py  run_react_agent.py
src/: api.py  code_database.py  data_schema_mapper.py  embeddings.py  google_search.py  llm.py  schema.py  (+2 more)
(+323 files in other folders)
