[project]
    name = "DSCodeGen"
    description = "AI Coding Assistant for Data Science"
    authors = [
        { name = "Zifeng Wang", email = "zifengw2@illinois.edu" },
        { name = "Benjamin Danek", email = "danekbenjamin@gmail.com" },
        { name = "Jimeng Sun", email = "jimeng.sun@gmail.com" },
    ]
    license = { file = "LICENSE" }
    readme = "README.md"
    classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
    ]
    requires-python = ">=3.10"
    dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "test",
    "test.*",
    "tests",
    "tests.*",
    "testing",
    "testing.*",
    "docs",
    "docs.*",
    "examples",
    "examples.*",
    "build",
    "build.*",
    "dist",
    "dist.*",
    "egg-info",
    "egg-info.*",
]

[tool.pytest.ini_options]
minversion = "7.2.1"
addopts = "-ra"